# pybind-project

./: CMakeLists.txt  pyproject.toml  setup.py
.github/workflows/: build_and_test.yml
extras/: CMakeLists.txt
extras/pyproj/: CMakeLists.txt  pyproj.cpp
extras/python/: CMakeLists.txt  pyproj.cpp
extras/python/src/pyproj/: .gitignore  __init__.py
extras/python/tests/: CMakeLists.txt
extras/python/tests/pyproj/: test_version.py
src/proj/: .gitignore  CMakeLists.txt  proj.cpp  proj.h  version.cpp  version.h.in
tests/: CMakeLists.txt
tests/proj/: CMakeLists.txt  version.test.cpp
tools/cmake/: set_up_googletest.cmake  set_up_pybind11.cmake  target_clang_tidy.cmake  target_coverage.cmake
