[project]
name = "pyproj"
authors = [{name="hsaunders1904"}]
dynamic=['version']
requires-python = ">=3.8"

[project.urls]
homepage = "https://github.com/hsaunders1904/pybind-project"
repository = "https://github.com/hsaunders1904/pybind-project"

[build-system]
requires = ["setuptools >= 61.0.0", "cmake >= 3.18"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["extras/python/src"]
include = ["pyproj*"]
exclude = ["*tests*"]

[tool.setuptools.dynamic]
version = {attr = "pyproj.__version__"}
