[project]
name = "pyproj"
version = "0.1.0"
requires-python = ">=3.8"

[project.urls]
homepage = "https://github.com/hsaunders1904/pybind-project"
repository = "https://github.com/hsaunders1904/pybind-project"

[build-system]
requires = ["setuptools >= 61.0.0", "cmake >= 3.18"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["extras/python/src"]
include = ["pyproj*"]
exclude = ["*tests*"]
