[project]
name = "pyproj"
version = "0.1.0"
requires-python = ">=3.8"

[project.urls]
homepage = "https://github.com/hsaunders1904/pybind-project"
repository = "https://github.com/hsaunders1904/pybind-project"

[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["extras/python/src/pyproj"]

[tool.scikit-build.cmake.define]
proj_BUILD_TESTS = "OFF"

[tool.setuptools.packages.find]
where = ["extras/python/src"]
